fixtures/python/test-double/should_fail/fake_client.py
def create_fake_database():
    return {"users": []}

fake_db = create_fake_database()
